--- a/src/app/component/device/device.component.less
+++ b/src/app/component/device/device.component.less
@@ -34,6 +34,22 @@
   font-size: 20px;
   font: 30px/15px bold;
 }
+.disabled{
+  color: gray;
+}
+.relative{
+  position: relative;
+
+}
+.absolute{
+  position: absolute;
+  top: 100%;
+  &.helper{
+  font-size: 10px;
+  color: #c80e00;
+  }
+}
+
 @media screen and (max-width: 600px){
   .content{
     position: relative;
