--- a/src/app/component/menu/menu.component.jade
+++ b/src/app/component/menu/menu.component.jade
@@ -18,7 +18,7 @@ table
             img([src]="user.image || 'src/img/no-avatar.gif' ", (click)="goToProfile()")
         td.button.enter( (click)="onOpenLogin()")
             |{{user.name || ('SIGN_IN' | translate)}}
-menu-athlete(*ngIf="isShowMenuAthlete", (onCloseMenuAthlete) = 'onCloseMenuAthlete($event)')
+menu-athlete(*ngIf="isShowMenuAthlete", (onCloseMenuAthlete) = 'onCloseMenuAthlete($event)', @ngIfAnimation='')
 menu-track(*ngIf="menuService.menuOpen")
 track-list(*ngIf="trackList.length", [style.top]="menuService.menuOpen ?  '150px' : '100%' ")
 menu-login(*ngIf="menuService.menuOpenLogin")
