--- a/src/app/component/track-list/one-item-track-component/one-item-track.component.less
+++ b/src/app/component/track-list/one-item-track-component/one-item-track.component.less
@@ -1,4 +1,4 @@
-@import "../../../../css/constant";
+@import "../../../css/constant";
 :host{
   color: black;
   border-top: 1px solid @main-border-color;
