--- a/src/app/component/track-list/track-list.less
+++ b/src/app/component/track-list/track-list.less
@@ -1,7 +1,7 @@
-@import "../../../css/constant";
+@import "../../css/constant";
 :host{
   position: absolute;
-  top: calc(~"100% + 100px");
+  bottom: 0;
   background: rgba(255,255,255,0.8);
   z-index: 2;
   padding: 15px;
