--- a/src/app/css/index.less
+++ b/src/app/css/index.less
@@ -73,7 +73,7 @@ input.input{
   margin: 0;
   padding: 0;
   font-family: Geneva, Arial, Helvetica, sans-serif;
-
+  box-sizing: border-box;
 }
 li{
   list-style-type: none;
