--- a/src/app/component/menu/menu.component.less
+++ b/src/app/component/menu/menu.component.less
@@ -108,6 +108,10 @@ table {
       }
     }
   }
+
+}
+.ico{
+  display: none;
 }
 @media screen and (max-width: 450px){
 
@@ -119,6 +123,9 @@ table {
   }
   .name{
     display: none;
+  }
+  .ico{
+    display: block;
   }
 }
 @media screen and (min-width: 450px){
