template for markers

--- a/src/app/component/my-marker-list-component/my-marker-list-component.less
+++ b/src/app/component/my-marker-list-component/my-marker-list-component.less
@@ -4,9 +4,11 @@
   z-index: 2;
   top: 40px;
   left: 0;
-  background: white;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.7) 70%, rgba(255, 255, 255, 0) 100%);
   padding: 15px;
+  min-width: 200px;
 }
+
 .close {
   position: absolute;
   right: 0;
