--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -5,6 +5,9 @@
 @green-color: #3a9d31;
 @gray-color: #b2b4b7;
 
+
+
+
 @blue-color: dodgerblue;
 @main-text-color: #444a56;
 @danger-background: red;
@@ -12,6 +15,9 @@
 @orange-color: #ff8b15;
 @success-background: #7ddc74;
 @box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+
+@active-button-color: rgba(30, 144, 255, 0.72);
+
 .ul-li(){
   cursor: pointer;
   background-color:  rgba(255, 255, 255, 0.8);
