--- a/src/app/css/index.less
+++ b/src/app/css/index.less
@@ -62,7 +62,12 @@ button, .button{
     color: #999999;
     box-shadow: none;
   }
-  &.primary{
+  &.active {
+    color: white;
+    background: @active-button-color;
+    box-shadow: inset 0 0 20px rgba(0,0,0,0.2)
+  }
+  &.primary:not(.active){
     color: @blue-color;
   }
 
