--- a/src/app/component/my-marker-list-component/my-marker-list-component.less
+++ b/src/app/component/my-marker-list-component/my-marker-list-component.less
@@ -1,3 +1,4 @@
+@import "../../css/constant";
 :host {
   display: block;
   position: absolute;
@@ -18,4 +19,11 @@
   padding: 15px;
   font-size: 20px;
   font: 30px/15px bold;
+}
+.marker-row{
+  justify-content: space-between;
+}
+.marker-cell{
+  width: 100%;
+  border-bottom: 1px solid @main-border-color;
 }
