--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -9,6 +9,7 @@
 
 
 @blue-color: dodgerblue;
+@blue-color-light: #e6f4fd;
 @main-text-color: #444a56;
 @danger-background: red;
 @warning-background: #ffd263;
