--- a/src/app/shared-module/menu-list-component/menu-list-component.less
+++ b/src/app/shared-module/menu-list-component/menu-list-component.less
@@ -2,8 +2,14 @@
   display: block;
   width: 16px;
   height: 16px;
-  background: red;
+  background: url("src/img/menu.png") no-repeat center;
+  background-size: 100%;
+  opacity: 0.7;
   border-radius: 50%;
+  &:hover{
+    opacity: 1;
+  }
+
   &>*{
     width: 100%;
     height: 100%;
