--- a/src/app/component/gtgbc/gtgbc.component.less
+++ b/src/app/component/gtgbc/gtgbc.component.less
@@ -10,7 +10,7 @@
 .content{
     position: absolute;
     background: rgba(255, 255, 255, 0.9);
-    min-width: 600px;
+    width: 600px;
     margin-left: -300px;
     padding: 0;
     left: 50%;
@@ -19,6 +19,14 @@
     &>div{
 	position: relative;
 	padding: 30px;
+    }
+    textarea{
+        width: 100%;
+        border: none ;
+        padding: 4px 8px;
+        border-bottom: 1px solid @gray-color;
+        border-left: 2px solid @gray-color;
+
     }
 }
 .close{
