--- a/src/app/component/gtgbc/gtgbc.component.jade
+++ b/src/app/component/gtgbc/gtgbc.component.jade
@@ -3,7 +3,7 @@ div.content
         .close((click)="onClose()") &times;
         .row
             .title-row
-                p
+                p Response type: {{messageTypeString}}
 
 
 
