--- a/src/app/component/journal-component/journal.component.less
+++ b/src/app/component/journal-component/journal.component.less
@@ -54,9 +54,17 @@
   overflow-x: hidden;
 }
 .row{
-  margin: 0 -15px;
+  margin: 0 -15px 15px;
   &>p{
     margin: 0 15px;
+    &.selected{
+      font-weight: bold;
+      margin-left: 15px;
+      &:before{
+        content: "\25BA";
+        margin-left: -15px;
+      }
+    }
   }
 }
 @media screen and (max-width: 600px){
