--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -17,7 +17,7 @@
       <div *ngIf="unViewedIds.length" class="un-viewed-ids">{{unViewedIds.length}}</div>
       <div *ngIf="invites.length" class="num">{{invites.length}}</div>
     </td>
-    <td class="icoUser"><img [src]="user.image || 'src/img/no-avatar.gif' " (click)="goToProfile()"/></td>
+    <td class="icoUser"><img [src]="user.image || 'img/no-avatar.gif' " (click)="goToProfile()"/></td>
     <td (click)="onOpenLogin()" class="button enter">{{user.name || ('SIGN_IN' | translate)}}</td>
   </tr>
 </table>
