--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -6,7 +6,7 @@
       <p>{{'PROFILE' | translate}}</p>
     </div>
     <div class="row border">
-      <div class="load-img"><img [src]="user.image || 'src/img/no-avatar.gif' " (click)="onOpenImage()"/>
+      <div class="load-img"><img [src]="user.image || 'img/no-avatar.gif' " (click)="onOpenImage()"/>
         <div class="row">{{user.name}}</div>
         <div class="row">
           <p>
