--- a/src/app/component/device/device.component.html
+++ b/src/app/component/device/device.component.html
@@ -58,7 +58,7 @@
       </div>
       <help-container *ngIf="showHelp">
         <div class="help">
-          <!--.row--><a href="https://play.google.com/store/apps/details?id=com.mendhak.gpslogger" target="_blank"><img src="src/img/help/ico.webp" class="ico"/></a><a href="https://play.google.com/store/apps/details?id=com.mendhak.gpslogger" target="_blank">GPS-логгер (GPS Logger)</a>
+          <!--.row--><a href="https://play.google.com/store/apps/details?id=com.mendhak.gpslogger" target="_blank"><img [src]="hostPrefix + 'img/help/ico.webp'" class="ico"/></a><a href="https://play.google.com/store/apps/details?id=com.mendhak.gpslogger" target="_blank">GPS-логгер (GPS Logger)</a>
           <table>
             <tbody>
               <tr>
@@ -75,10 +75,10 @@
                 </td>
               </tr>
               <tr>
-                <td><img src="src/img/help/01.png"/></td>
-                <td><img src="src/img/help/02.png"/></td>
-                <td><img src="src/img/help/03.png"/></td>
-                <td><img src="src/img/help/04.png"/></td>
+                <td><img [src]="hostPrefix+ 'img/help/01.png'"/></td>
+                <td><img [src]="hostPrefix +'img/help/02.png'"/></td>
+                <td><img [src]="hostPrefix+'img/help/03.png'"/></td>
+                <td><img [src]="hostPrefix + 'img/help/04.png'"/></td>
               </tr>
             </tbody>
           </table>
