--- a/src/app/component/track-list/one-item-track-component/one-item-track.component.html
+++ b/src/app/component/track-list/one-item-track-component/one-item-track.component.html
@@ -10,7 +10,7 @@
   <div>Дистанция</div><b>{{track.distance}} km</b>
 </div>
 <div class="action">
-  <div>Макс скорость</div><b>{{maxSpeed}} km/h</b>
+  <div>Макс скорость</div><b>{{track.maxSpeed}} km/h</b>
 </div>
 <div class="action">
   <div>Точек</div><b>{{track.points.length}}</b>
