--- a/src/app/component/device/device.component.html
+++ b/src/app/component/device/device.component.html
@@ -1,84 +1,91 @@
-
 <div class="content">
-  <div (click)="clearPredel()">
-    <div (click)="onClose()" class="close">&times;</div>
-    <div id="oloe">Регистрация устройства</div>
-    <form #f="ngForm">
-      <div class="row">
-        <table>
-          <thead>
-            <tr>
-              <th>image</th>
-              <th class="required">Имя</th>
-              <th class="required">Идентификатор устройства</th>
-              <th>Телефон</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let dev of devices ;  let i = index " (click)="preDel($event, i)">
-              <td><img [src]="dev.image || hostPrefix + 'img/speedway_4_logo.jpg' " (click)="onLoadImage(dev, i)" class="logo"/>
-                <input type="file" [attr.id]="'input-img-'+i" name="files[]" multiple="" style="display: none"/>
-              </td>
-              <td>{{dev.name}}</td>
-              <td>{{dev.device_key}}</td>
-              <td>{{dev.phone}}</td>
-              <td class="predelCell">
-                <div *ngIf="btnPreDel.index==i" (click)="onDel($event, dev)" class="predel">&times;</div>
-              </td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>
-                <input type="text" [(ngModel)]="device.name" name="deviceName" placeholder="{{user.name}}" required="required" minlength="3"/>
-              </td>
-              <td>
-                <div class="relative">
-                  <input type="text" id="deviceId" [(ngModel)]="device.id" name="deviceId" placeholder="88888888888" required="required" minlength="12" #deviceId="ngModel"/>
-                  <div *ngIf="deviceId.invalid &amp;&amp; (deviceId.dirty || deviceId.touched)" class="absolute helper">
-                    <div *ngIf="deviceId.errors.minlength">must be at least 12 characters long.</div>
-                  </div>
-                </div>
-              </td>
-              <td>
-                <input type="text" [(ngModel)]="device.phone" name="devicePhone"/>
-              </td>
-              <td>
-                <button (click)="onAdd($event)" [disabled]="f.invalid" [ngClass]="{disabled: f.invalid }">Добавить</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </form>
-    <div class="border-hidden"></div>
-    <div class="row flex vertical-center" (click)="navigateToHelp('gps-logger')" [ngClass]="{'selected': deviceNameSelected === 'gps-logger'}">
-      <div class="cell">
-        <img [src]="hostPrefix + 'img/help/ico.webp'" class="ico"/>
-      </div>
-      <div class="cell">
+    <div (click)="clearPredel()">
+        <div (click)="onClose()" class="close">&times;</div>
+        <div id="oloe">Регистрация устройства</div>
+        <form #f="ngForm">
+            <div class="row">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>image</th>
+                        <th class="required">Имя</th>
+                        <th class="required">Идентификатор устройства</th>
+                        <th>Телефон</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let dev of devices ;  let i = index " (click)="preDel($event, i)">
+                        <td><img [src]="dev.image || hostPrefix + 'img/speedway_4_logo.jpg' "
+                                 (click)="onLoadImage(dev, i)" class="logo"/>
+                            <input type="file" [attr.id]="'input-img-'+i" name="files[]" multiple=""
+                                   style="display: none"/>
+                        </td>
+                        <td>{{dev.name}}</td>
+                        <td>{{dev.device_key}}</td>
+                        <td>{{dev.phone}}</td>
+                        <td class="predelCell">
+                            <div *ngIf="btnPreDel.index==i" (click)="onDel($event, dev)" class="predel">&times;</div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <input type="text" [(ngModel)]="device.name" name="deviceName" placeholder="{{user.name}}"
+                                   required="required" minlength="3"/>
+                        </td>
+                        <td>
+                            <div class="relative">
+                                <input type="text" id="deviceId" [(ngModel)]="device.id" name="deviceId"
+                                       placeholder="88888888888" required="required" minlength="12"
+                                       #deviceId="ngModel"/>
+                                <div *ngIf="deviceId.invalid &amp;&amp; (deviceId.dirty || deviceId.touched)"
+                                     class="absolute helper">
+                                    <div *ngIf="deviceId.errors.minlength">must be at least 12 characters long.</div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <input type="text" [(ngModel)]="device.phone" name="devicePhone"/>
+                        </td>
+                        <td>
+                            <button (click)="onAdd($event)" [disabled]="f.invalid" [ngClass]="{disabled: f.invalid }">
+                                Добавить
+                            </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </form>
+        <div class="border-hidden"></div>
+        <div class="row flex vertical-center" (click)="navigateToHelp('gps-logger')"
+             [ngClass]="{'selected': deviceNameSelected === 'gps-logger'}">
+            <div class="cell">
+                <img [src]="hostPrefix + 'img/help/ico.webp'" class="ico"/>
+            </div>
+            <div class="cell">
 
-        GPS-логгер (GPS Logger) ?
-      </div>
-    </div>
-    <div class="row flex vertical-center"  (click)="navigateToHelp('gl-520')"  [ngClass]="{'selected': deviceNameSelected === 'gl-520'}">
-      <div class="cell">
-        <img [src]="hostPrefix + 'img/GL520_.png'" class="ico"/>
-      </div>
-      <div class="cell">
+                GPS-логгер (GPS Logger) ?
+            </div>
+        </div>
+        <div class="row flex vertical-center" (click)="navigateToHelp('gl-520')"
+             [ngClass]="{'selected': deviceNameSelected === 'gl-520'}">
+            <div class="cell">
+                <img [src]="hostPrefix + 'img/GL520_.png'" class="ico"/>
+            </div>
+            <div class="cell">
 
-         GL-520, Gl-530 ?
-      </div>
+                GL-520, Gl-530 ?
+            </div>
+        </div>
+        <div class="row">
+            <router-outlet #ololo></router-outlet>
+        </div>
+        <div class="row">
+            <div>
+                <div (click)="onShowHelp()" class="bnt-help">&#9660; ?</div>
+            </div>
+        </div>
     </div>
-    <div class="row">
-      <router-outlet #ololo></router-outlet>
-    </div>
-    <div class="row">
-      <div>
-        <div (click)="onShowHelp()" class="bnt-help">&#9660; ?</div>
-      </div>
-
-
-    </div>
-  </div>
 </div>
