popup custom start

--- a/src/app/component/device/device.component.html
+++ b/src/app/component/device/device.component.html
@@ -25,7 +25,7 @@
                         <td>{{dev.device_key}}</td>
                         <td>{{dev.phone}}</td>
                         <td class="predelCell">
-                            <div *ngIf="btnPreDel.index==i" (click)="onDel($event, dev)" class="predel">&times;</div>
+                            <div *ngIf="btnPreDel.index==i" (click)="preDel2($event, dev)" class="predel">&times;</div>
                         </td>
                     </tr>
                     <tr>
