--- a/src/app/modules/popup-module/popup-container.component.html
+++ b/src/app/modules/popup-module/popup-container.component.html
@@ -1,3 +1,3 @@
 <div class="mask">
-    <popup-item-component *ngFor="let popup of popupList" [popup]="popup" ></popup-item-component>
+    <popup-item-component *ngFor="let popup of popupList" [popup]="popup" (onClose)="onClose($event)" ></popup-item-component>
 </div>
