--- a/src/app/css/constant.less
+++ b/src/app/css/constant.less
@@ -14,7 +14,7 @@
 @danger-background: red;
 @warning-background: #ffd263;
 @orange-color: #ff8b15;
-@success-background: #7ddc74;
+@success-background: chartreuse;
 @box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
 
 @active-button-color: rgba(30, 144, 255, 0.72);
