--- a/src/app/modules/popup-module/popup-item.component.less
+++ b/src/app/modules/popup-module/popup-item.component.less
@@ -3,5 +3,22 @@
     background: white;
     border-radius: 2px;
     box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
+    //padding: 15px;
+}
+
+.title{
     padding: 15px;
+    position: relative;
+   border-bottom: 1px solid chartreuse;
+}
+
+.close{
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: darkred;
+    cursor: pointer;
+    padding: 15px;
+    font-size: 20px;
+    font: 30px/15px bold;
 }
