--- a/src/app/css/popup-items.less
+++ b/src/app/css/popup-items.less
@@ -1,6 +1,8 @@
 @import "constant";
 
 popup-item-component {
+    border: 1px solid @success-background;
+
     .buttons-container {
 	display: flex;
 	justify-content: flex-end;
