--- a/src/app/modules/popup-module/popup-item.component.html
+++ b/src/app/modules/popup-module/popup-item.component.html
@@ -3,7 +3,7 @@
         <div  [textContent]="popup.title">
 
         </div>
-        <div (click)="forceClose()" class="close">&times;</div>
+        <div (click)="close()" class="close">&times;</div>
 
     </div>
     <ng-container *ngComponentOutlet ="popup.body; injector: myInjector" ></ng-container>
