--- a/src/app/component/friends-component/friends-component.html
+++ b/src/app/component/friends-component/friends-component.html
@@ -1,67 +1,71 @@
-
 <div class="content">
-  <div>
-    <div (click)="onClose()" class="close">&times;</div>
-    <users-container>
-      <div class="row">
-        <div class="flex-cell">
-          <h4>Друзья</h4>
-          <table>
-            <tbody>
-              <tr *ngFor="let user of friends; let i = index">
-                <td>
-                  <div class="img-container"><img [src]="user.image || 'img/no-avatar.gif' "/>
-                    <div (click)="startChat(user)" [ngClass]="{'chat-un-viewed': user.chatUnViewed &amp;&amp; user.chatUnViewed.length}" title="отправить личное сообщение" class="ico-chat"></div>
-                    <div *ngIf="user.chatUnViewed &amp;&amp; user.chatUnViewed.length" class="ico-un-viewed">{{user.chatUnViewed.length}}</div>
-                  </div>
-                </td>
-                <td>
-                  <div class="name">{{user.name}}</div>
-                  <div class="last-visit">Last visit {{user.lastVisit | date: 'dd/MM/yyyy HH:mm:ss'}}</div>
-                  <!--{{user.name}} {{user.lastVisit | date: 'dd/MM/yyyy HH:mm:ss'}}-->
-                </td>
-                <td>
-                  <div (click)="onDelFriend(user)" class="invite">Удалить</div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div *ngIf="invites.length" class="row">
-        <div class="flex-cell">
-          <h4>Запросы</h4>
-          <table>
-            <tbody>
-              <tr *ngFor="let user of invites; let i = index">
-                <td>
-                  <div class="img-container"><img [src]="user.image || 'img/no-avatar.gif' "/>
-                    <div (click)="startChat(user)" [ngClass]="{'chat-un-viewed': user.chatUnViewed &amp;&amp; user.chatUnViewed.length}" title="отправить личное сообщение" class="ico-chat"></div>
-                    <div *ngIf="user.chatUnViewed &amp;&amp; user.chatUnViewed.length" class="ico-un-viewed">{{user.chatUnViewed.length}}</div>
-                  </div>
-                </td>
-                <td>
-                  <div class="name">{{user.name}}</div>
-                  <div class="last-visit">Last visit {{user.lastVisit | date: 'dd/MM/yyyy HH:mm:ss'}}</div>
-                </td>
-                <td>
-                  <div (click)="onAccept(user)" class="invite accept">Принять</div>
-                  <div (click)="onReject(user)" class="invite reject">Отклонить</div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="row">
-        <div class="border-hidden">
-          <div>
-            <button style="float: right" (click)="getAllUsers()">Просмотреть всех участников</button>
-          </div>
-        </div>
-        <div class="border-hidden"></div>
-      </div>
-      <router-outlet></router-outlet>
-    </users-container>
-  </div>
+    <div>
+        <div (click)="onClose()" class="close">&times;</div>
+        <users-container>
+            <div class="row">
+                <div class="flex-cell">
+                    <h4>Друзья</h4>
+                    <table>
+                        <tbody>
+                        <tr *ngFor="let user of friends; let i = index">
+                            <td>
+                                <div class="img-container"><img [src]="user.image || 'img/no-avatar.gif' "/>
+                                    <div (click)="startChat(user)"
+                                         [ngClass]="{'chat-un-viewed': user.chatUnViewed &amp;&amp; user.chatUnViewed.length}"
+                                         title="отправить личное сообщение" class="ico-chat"></div>
+                                    <div *ngIf="user.chatUnViewed &amp;&amp; user.chatUnViewed.length"
+                                         class="ico-un-viewed">{{user.chatUnViewed.length}}
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="name">{{user.name}}</div>
+                                <div class="last-visit">Last visit {{user.lastVisit | date: 'dd/MM/yyyy HH:mm:ss'}}
+                                </div>
+                                <!--{{user.name}} {{user.lastVisit | date: 'dd/MM/yyyy HH:mm:ss'}}-->
+                            </td>
+                            <td>
+                                <div (click)="onDelFriend(user)" class="invite">Удалить</div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!--<div *ngIf="invites.length" class="row">
+              <div class="flex-cell">
+                <h4>Запросы</h4>
+                <table>
+                  <tbody>
+                    <tr *ngFor="let user of invites; let i = index">
+                      <td>
+                        <div class="img-container"><img [src]="user.image || 'img/no-avatar.gif' "/>
+                          <div (click)="startChat(user)" [ngClass]="{'chat-un-viewed': user.chatUnViewed &amp;&amp; user.chatUnViewed.length}" title="отправить личное сообщение" class="ico-chat"></div>
+                          <div *ngIf="user.chatUnViewed &amp;&amp; user.chatUnViewed.length" class="ico-un-viewed">{{user.chatUnViewed.length}}</div>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="name">{{user.name}}</div>
+                        <div class="last-visit">Last visit {{user.lastVisit | date: 'dd/MM/yyyy HH:mm:ss'}}</div>
+                      </td>
+                      <td>
+                        <div (click)="onAccept(user)" class="invite accept">Принять</div>
+                        <div (click)="onReject(user)" class="invite reject">Отклонить</div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>-->
+            <div class="row">
+                <div class="border-hidden">
+                    <div>
+                        <button style="float: right" (click)="getAllUsers()">Просмотреть всех участников</button>
+                    </div>
+                </div>
+                <div class="border-hidden"></div>
+            </div>
+            <router-outlet></router-outlet>
+        </users-container>
+    </div>
 </div>
